# fathom

./: .gitignore  Cargo.toml  LICENSE  README.md  compose.yml  justfile
.cargo/: config.toml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.svelte  app.css  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/lib/: DesktopShell.svelte  app-data.ts
crates/fathom-cli/: Cargo.toml
crates/fathom-cli/src/: main.rs
crates/fathom-cli/tests/: end_to_end.rs
crates/fathom-core/: Cargo.toml
crates/fathom-core/src/: lib.rs
crates/fathom-ingest/: Cargo.toml
crates/fathom-ingest/src/: lib.rs
crates/fathom-narrative-cli/: Cargo.toml  build.rs
crates/fathom-narrative-cli/src/: main.rs
crates/fathom-narrative-cli/tests/: end_to_end.rs
crates/fathom-narrative-core/: Cargo.toml
crates/fathom-narrative-ingest/: Cargo.toml
crates/fathom-narrative-ingest/src/: hf.rs  lib.rs  sec.rs
crates/fathom-narrative-suggestors/: Cargo.toml
crates/fathom-narrative-suggestors/src/: invariants.rs  portfolio_seed.rs  risk_factor_drift.rs  risk_factor_language.rs
crates/fathom-sparc-cli/: Cargo.toml  build.rs
crates/fathom-sparc-cli/src/: main.rs
crates/fathom-sparc-cli/tests/: end_to_end.rs
crates/fathom-sparc-suggestors/: Cargo.toml
crates/fathom-sparc-suggestors/src/: invariants.rs  lib.rs  portfolio_seed.rs  risk_factor_drift.rs  risk_factor_language.rs
crates/fathom-suggestors/: Cargo.toml
crates/fathom-suggestors/src/: lib.rs
fixtures/: apple-fy2024-risk-factors.json  apple-fy2025-risk-factors.json  cik-0000789019-fy2024-risk-factors.json  cik-0000789019-fy2025-risk-factors.json  cik-0001045810-fy2025-risk-factors.json  cik-0001045810-fy2026-risk-factors.json
kb/: Home.md  Identity.md  LOG.md  platform-feedback-loop.md
