[package]
name = "fathom-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Fathom CLI — assemble formations and run convergence over filings."

[[bin]]
name = "fathom"
path = "src/main.rs"

[dependencies]
fathom-core.workspace = true
fathom-ingest.workspace = true
fathom-suggestors.workspace = true

# Converge contracts — `kernel-authority` exposes the `new_fact` constructor
# used to seed the in-memory Context the suggestor runs against.
converge-pack = { workspace = true, features = ["kernel-authority"] }

# CLI plumbing
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# NOTE: converge-kernel/storage and the organism-* crates are declared in
# `workspace.dependencies` and pulled into this crate when the engine
# integration and formation assembly slices land. The first-slice CLI runs
# a single suggestor directly against a hand-rolled Context — enough to
# demonstrate the analytical pipeline end-to-end without engine boilerplate.
