[package]
name = "fathom-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Domain types for Fathom — companies, filings, sections, periods."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
